--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -10,3 +10,6 @@ build:
   os: ubuntu-22.04
   tools:
     python: "3"
+  jobs:
+    pre_install:
+    - git update-index --assume-unchanged docs/conf.py
