--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -11,5 +11,7 @@ build:
   tools:
     python: "3"
   jobs:
+    post_checkout:
+    - '[ "$(git rev-parse --is-shallow-repository)" == "true" ] && git fetch --unshallow --tags'
     pre_install:
     - git update-index --assume-unchanged docs/conf.py
