--- a/setup.cfg
+++ b/setup.cfg
@@ -30,7 +30,8 @@ python_requires = >=3.6
 install_requires =
 	packaging
 	pep508-parser
-	setuptools
+	setuptools; python_version < "3.12"
+	setuptools >= 66.1; python_version >= "3.12"
 	tomlkit
 	typing-extensions >=4, <5
 
