--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,8 +15,8 @@ repos:
   - id: trailing-whitespace
 
 - repo: https://github.com/astral-sh/ruff-pre-commit
-  # Last version of ruff which will accept "py36" as target-version
-  rev: v0.5.0
+  # v0.0.233: Last version of ruff which will accept "py36" as target-version
+  rev: v0.0.233
   hooks:
   - id: ruff
     args:
