Turn on xfail_strict
This means that if a test marked xfail actually passes, it will cause
the entire test suite to fail. This prompts us to remove xfail markers
when they are no longer relevant, and to deal with the corresponding
GitHub issues or anything else that needs to be done.

--- a/pytest.ini
+++ b/pytest.ini
@@ -37,3 +37,4 @@ pythonpath=test_support
 markers =
 	slow: tests that take a longer time to run
 	needs_network: tests that need to download data from the internet
+xfail_strict=true
