--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -29,6 +29,7 @@ repos:
   rev: v1.10.1
   hooks:
   - id: mypy
+    exclude: "conftest\\.py$"
     additional_dependencies:
     - pyproject-metadata
     - setuptools
