Add testing with Python 3.13
The final beta of Python 3.13 is now available, so I'm adding it to
the list of versions we test. It's not required to pass for now since
3.13 is not final.

In order to get more exposure with Python 3.13 testing, I chose to
enable it in pre-merge tests, not only releases. It won't block merges
if something breaks since the test is not required to pass.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,6 +45,9 @@ jobs:
         - python: "3.6"
           platform: ubuntu-20.04
           force-minimum-dependencies: false
+        - python: "3.13"
+          platform: ubuntu-latest
+          force-minimum-dependencies: false
         # For testing forced minimum deps, use the latest stable version of Python
         # on which those dependencies can be installed
         - python: "3.12"
