--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -59,6 +59,7 @@ env:
 jobs:
   test:
     runs-on: ${{ inputs.platform }}
+    continue-on-error: ${{ inputs.python-version >= '3.13' }}
     steps:
       - uses: actions/checkout@v3
       - name: Setup Python
