Enable testing with minimum dependencies on Python 3.8
Previously, in pre- and post-merge testing, we would only test with
the oldest allowed versions of our dependencies on Python 3.12. However,
the pytest distribution package test gets skipped on Python 3.12, which
means we're sacrificing an opportunity to detect issues that arise with
pytest when using old versions of setuptools and friends.

This commit also enables minimum dependency testing on Python 3.8, so we
have a chance to find those errors before making a release.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,8 +48,11 @@ jobs:
         - python: "3.13"
           platform: ubuntu-latest
           force-minimum-dependencies: false
-        # For testing forced minimum deps, use the latest stable version of Python
-        # on which those dependencies can be installed
+        # For testing forced minimum deps, use the newest and oldest stable
+        # versions of Python on which those dependencies can be installed.
+        - python: "3.8"
+          platform: ubuntu-latest
+          force-minimum-dependencies: true
         - python: "3.12"
           platform: ubuntu-latest
           force-minimum-dependencies: true
