setup.cfg: Bump `setuptools-metadata` requirements
The older version required `List[Tuple[str, str]]` for `maintainers` and
`authors`, the newer one requires `List[Tuple[str, Optional[str]]]`,
`mypy` won't accept the former as a substitute for the latter.

`setuptools-metadata` 0.8.1 made this change, then 0.9.0 further broke
the API established in pre-0.8.1 releases.  So to avoid a lot of test
complexity, we'll just settle for 0.9.0 going forward.

--- a/setup.cfg
+++ b/setup.cfg
@@ -61,7 +61,7 @@ testing =
 	importlib-metadata; \
 		python_version < "3.8"
 	# no version of pyproject-metadata supports Python 3.6
-	pyproject-metadata; \
+	pyproject-metadata >= 0.8.1; \
 		python_version >= "3.7"
 	requests
 	types-setuptools
