--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -15,3 +15,8 @@ build:
     - 'git fetch --unshallow --tags || true'
     pre_install:
     - git update-index --assume-unchanged docs/conf.py
+
+# https://about.readthedocs.com/blog/2024/12/deprecate-config-files-without-sphinx-or-mkdocs-config/
+sphinx:
+  # Path to your Sphinx configuration file.
+  configuration: docs/conf.py
