--- a/setup.cfg
+++ b/setup.cfg
@@ -26,9 +26,8 @@ packages = find:
 package_dir =
 	= src
 include_package_data = true
-python_requires = >=3.6
+python_requires = >=3.7
 install_requires =
-	dataclasses; python_version < "3.7"
 	packaging
 	pep508-parser
 	setuptools; python_version < "3.12"
@@ -61,10 +60,8 @@ testing =
 	importlib-metadata; \
 		python_version < "3.8"
 	wheel-filename
-	# no version of pyproject-metadata supports Python 3.6
 	# pyproject-metadata 0.9.0 has breaking changes vs 0.8.1 and earlier.
-	pyproject-metadata >= 0.9.0; \
-		python_version >= "3.7"
+	pyproject-metadata >= 0.9.0
 	requests
 	types-setuptools
 
