--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,15 +15,12 @@ repos:
   - id: trailing-whitespace
 
 - repo: https://github.com/astral-sh/ruff-pre-commit
-  # v0.0.233: Last version of ruff which will accept "py36" as target-version
-  rev: v0.0.233
+  rev: v0.11.8
   hooks:
   - id: ruff
     args:
     - "--fix"
-    # When updating to ruff v0.0.244 or higher, this can be enabled to improve
-    # change detection by pre-commit
-    #- "--exit-non-zero-on-fix"
+    - "--exit-non-zero-on-fix"
 
 - repo: https://github.com/pre-commit/mirrors-mypy
   rev: v1.15.0
