Dynamically determine Python prerelease versions in CI
When we run tests in CI, the testing job is supposed to fail if
the tests fail, but only for stable versions of Python, not for
prereleases. We use a continue-on-error setting in the workflow file to
implement this. When Python 3.13 was released, I guess we forgot to
update the setting to make Python 3.14 the first version that could fail
tests without failing the job, so for a long time our CI testing could
have failed on Python 3.13 and we probably wouldn't have noticed if it
didn't also fail on other versions.

To fix that, in this commit I'm changing the test workflow to
dynamically determine whether the active Python version is a stable or
prerelease version, and use that to decide whether to allow tests to
fail. In order to make it work, I had to change from a continue-on-error
setting on the whole job to continue-on-error on only the specific steps
that run the tests, but that's better anyway because it means CI will
now catch failures that happen during setup even on prerelease Python
versions.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -55,7 +55,6 @@ env:
 jobs:
   test:
     runs-on: ${{ inputs.platform }}
-    continue-on-error: ${{ inputs.python-version >= '3.13' }}
     steps:
       - uses: actions/checkout@v4
       - name: Setup Python
@@ -63,12 +62,20 @@ jobs:
         with:
           python-version: ${{ inputs.python-version }}
           allow-prereleases: true
+      - name: Check if Python is stable
+        id: python-is-stable
+        run: >
+          python
+          -c 'import sys; s = "stable" if (sys.version_info.releaselevel == "final") else ""; print(f"stable={s}")'
+          >>"$GITHUB_OUTPUT"
       - name: Install tox
         run: python -m pip install tox
       - name: Run script checks
+        continue-on-error: ${{!steps.python-is-stable.outputs.stable}}
         run: >
           tox -e script
       - name: Run tests
+        continue-on-error: ${{!steps.python-is-stable.outputs.stable}}
         # For simplicity, we limit forced minimum dependencies to direct
         # dependencies and build system dependencies, not extra dependencies
         # like pytest or sphinx.
