Add testing with Python 3.14
The final beta of Python 3.14 is now available, so I'm adding it to
the list of versions we test. It's not required to pass for now since
3.14 is not final.

This is based on the similar change I made for Python 3.13 in commit
28d4fb8729f55244228220293dd37b9ec1e08660.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -59,6 +59,9 @@ jobs:
         - python: "3.12"
           platform: ubuntu-latest
           force-minimum-dependencies: false
+        - python: "3.14"
+          platform: ubuntu-latest
+          force-minimum-dependencies: false
         - python: pypy3.7
           platform: ubuntu-latest
           force-minimum-dependencies: false
