--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,6 +40,9 @@ jobs:
         - python: "3.7"
           platform: ubuntu-22.04
           force-minimum-dependencies: false
+        - python: "3.14"
+          platform: ubuntu-latest
+          force-minimum-dependencies: false
         # For testing forced minimum deps, use the newest and oldest stable
         # versions of Python on which those dependencies can be installed.
         - python: "3.7"
