--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -66,7 +66,7 @@ jobs:
         id: python-is-stable
         run: >
           python
-          -c 'import sys; s = "stable" if (sys.version_info.releaselevel == "final") else ""; print("stable={s}")'
+          -c 'import sys; s = "stable" if (sys.version_info.releaselevel == "final") else ""; print("stable=f{s}")'
           >>"$GITHUB_OUTPUT"
       - name: Install tox
         run: python -m pip install tox
