--- a/.github/workflows/pre-merge.yml
+++ b/.github/workflows/pre-merge.yml
@@ -13,7 +13,10 @@ jobs:
     name: Check for a changelog fragment
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v5
+      with:
+        # Required to check commit history in changed-files step below
+        fetch-depth: 0
     - name: Get changed files
       id: changed-files
       uses: step-security/changed-files@v46
